<resources>
    <string name="app_name">China Welfare Lottery</string>
    <string name="action_settings">Settings</string>
    <string name="action_ssq">双色球</string>
    <string name="action_dlt">大乐透</string>
    <string name="action_qxc">七星彩</string>
    <string name="action_ljy">六加一</string>
    <string name="action_qws">七位数</string>
    <string name="action_qlc">七乐彩</string>
    <string name="action_plw">排列五</string>
    <string name="action_klb">快乐八</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next_one">随机一注</string>
    <string name="next_five">随机五注</string>
    <string name="next_clear">清空</string>
    <string name="next_save">复制</string>
    <string name="next_last">复制</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
